task1-hardening/secure/neighbour-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neighbour-api
  namespace: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neighbour-api
  template:
    metadata:
      labels:
        app: neighbour-api
    spec:
      containers:
      - name: neighbour-api
        image: hashicorp/http-echo:0.2.3
        args:
          - "-text=Hello from neighbour-api"
        ports:
        - containerPort: 5678
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
