task1-hardening/secure/neighbour-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neighbour-api
  namespace: payments
spec:
  selector:
    app: neighbour-api
  ports:
  - port: 80
    targetPort: 5678
  type: ClusterIP
